--- a/.github/workflows/addtest.yml
+++ b/.github/workflows/addtest.yml
@@ -1,8 +1,9 @@
-name: Addition Tests
+name: Addition Tests and Deployment
 
 on: [push, pull_request]
 
 jobs:
+
   test:
     runs-on: ubuntu-latest
     
@@ -19,3 +20,15 @@ jobs:
     
     - name: Run tests
       run: npm test
+    
+    - name: Run additional script on successful tests
+      if: ${{ success() }}
+      run: |
+        echo "Tests passed, running additional script."
+        node additional-script.js
+    
+    - name: Run error handling script on failed tests
+      if: ${{ failure() }}
+      run: |
+        echo "Tests failed, running error handling script."
+        node error-handling.js
